--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -8147,9 +8147,6 @@
     "FFlagAppChatFixExtraMessageRefetch": true,
     "FIntTimeToSendTimeToServeMeshSec": 300,
     "FFlagReportClientRbxmBundleSplitExperimentTreatment": true,
-    "AllowVideoPreRoll": true,
-    "FFlagExpChatEnableChannelTabsUI1010_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:41:19",
-    "FFlagEnableChannelTabsConfiguration1008_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:41:21",
     "FFlagEnableParentalControlsScreentimeEnforcement3": true,
     "FFlagEnableUserAccessServiceIntegration3": true,
     "FIntSettingsHubPlayersButtonsResponsiveThreshold": 0,
@@ -8533,6 +8530,12 @@
     "FFlagCaptureServiceRequestSignature": true,
     "FFlagAXRenameBestsellingSortIXPEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:49",
     "FFlagStudioVisualizationModesServiceFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:51",
+    "FFlagSplitCoreAndDevUIMetrics": true,
+    "FFlagEnableChannelTabsConfiguration1008": true,
+    "FFlagExpChatEnableChannelTabsUI1010": true,
+    "FFlagMeshLoDSendTimeToServeMesh_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:46:59",
+    "DFIntMissingDataPingReportThrottleHundredthsPercent_Staged": "10;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:51:11",
+    "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
@@ -9173,7 +9176,6 @@
     "FFlagCOLLAB6824UIThreadFix": true,
     "DFFlagPropertyRejectionCountTelemetry": true,
     "FFlagAudioEqualizerEditorFixes": true,
-    "FFlagSplitCoreAndDevUIMetrics": true,
     "FFlagStudioDataCollectionExperimentRaceCondition": true,
     "FFlagCAPDMContextInvalidUTF8": true,
     "FFlagStudioFixNewOpenPlaceReporting": true,
@@ -9595,7 +9597,6 @@
     "FFlagVideoFrameYuvGPU8": true,
     "FFlagEnableCommerceWebviewDomaAsTitleOnDesktop": true,
     "FFlagAXFilterValuesLogging": true,
-    "DFFlagIsFriendsWithUsesAreFriendsEndpointV2": false,
     "FFlagAXLogFiltersForOrganicClick3": true,
     "FFlagDragDetectorCounterEnabled": true,
     "FFlagGameBasicSettingsFramerateCap5": true,
@@ -9642,8 +9643,8 @@
     "FFlagEnableVisBugChecks27": true,
     "FFlagCSGPublishBugFix": true,
     "FFlagMigratePublishingNewEndpoint": true,
-    "FStringFlagRepoGitHashFastString": "f48191dd8ffe7b62bf76bc8915af68cda4bfee3c",
-    "DFStringFlagRepoGitHashDynamicString": "f48191dd8ffe7b62bf76bc8915af68cda4bfee3c",
-    "FStringFlipTimeStampFastString": "2024-11-06T20:27:09.295Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-06T20:27:09.295Z"
+    "FStringFlagRepoGitHashFastString": "4f0d383151f6d4d93ced22cc629792404f7d2ab3",
+    "DFStringFlagRepoGitHashDynamicString": "4f0d383151f6d4d93ced22cc629792404f7d2ab3",
+    "FStringFlipTimeStampFastString": "2024-11-06T20:51:48.371Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-06T20:51:48.371Z"
 }
