--- a/UWPApp.json
+++ b/UWPApp.json
@@ -8147,9 +8147,6 @@
     "FFlagAppChatFixExtraMessageRefetch": true,
     "FIntTimeToSendTimeToServeMeshSec": 300,
     "FFlagReportClientRbxmBundleSplitExperimentTreatment": true,
-    "FFlagSplitCoreAndDevUIMetrics_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:37:21",
-    "FFlagExpChatEnableChannelTabsUI1010_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:41:19",
-    "FFlagEnableChannelTabsConfiguration1008_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:41:21",
     "FFlagEnableParentalControlsScreentimeEnforcement3": true,
     "FFlagEnableUserAccessServiceIntegration3": true,
     "FIntSettingsHubPlayersButtonsResponsiveThreshold": 0,
@@ -8533,6 +8530,11 @@
     "FFlagCaptureServiceRequestSignature": true,
     "FFlagAXRenameBestsellingSortIXPEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:49",
     "FFlagStudioVisualizationModesServiceFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:51",
+    "FFlagSplitCoreAndDevUIMetrics": true,
+    "FFlagEnableChannelTabsConfiguration1008": true,
+    "FFlagExpChatEnableChannelTabsUI1010": true,
+    "FFlagMeshLoDSendTimeToServeMesh_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:46:59",
+    "DFIntMissingDataPingReportThrottleHundredthsPercent_Staged": "10;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:51:11",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8742,8 +8744,8 @@
     "FFlagRuntimeEnabled8": true,
     "FFlagColorPickerSliderOptimization2": true,
     "FFlagUWPSkipNetworkCheck": true,
-    "FStringFlagRepoGitHashFastString": "f48191dd8ffe7b62bf76bc8915af68cda4bfee3c",
-    "DFStringFlagRepoGitHashDynamicString": "f48191dd8ffe7b62bf76bc8915af68cda4bfee3c",
-    "FStringFlipTimeStampFastString": "2024-11-06T20:27:09.295Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-06T20:27:09.295Z"
+    "FStringFlagRepoGitHashFastString": "4f0d383151f6d4d93ced22cc629792404f7d2ab3",
+    "DFStringFlagRepoGitHashDynamicString": "4f0d383151f6d4d93ced22cc629792404f7d2ab3",
+    "FStringFlipTimeStampFastString": "2024-11-06T20:51:48.371Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-06T20:51:48.371Z"
 }
