--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -170,7 +170,7 @@
     "DFLogTrackTeamCreateSaveMD5HashOutput": 6,
     "DFStringAdditionalBlacklistHeaders": "SOAPAction",
     "DFStringAltTelegrafAddress": "35.155.141.13",
-    "DFStringAnalyticsNS1BeaconConfig": "https://c0cfly.rbxcdn.com/test-50kb.png|g2hjxw|https://c0ak.rbxcdn.com/test-50kb.png|g2g5dg|https://c0aws.rbxcdn.com/test-50kb.png|148d53m",
+    "DFStringAnalyticsNS1BeaconConfig": "https://sc0cfly.rbxcdn.com/test-50kb.png|g2hjxw|https://sc0ak.rbxcdn.com/test-50kb.png|g2g5dg|https://sc0aws.rbxcdn.com/test-50kb.png|148d53m",
     "DFStringDataStoreThrottleMsg": "DataStore request was added to queue. If request queue fills, further requests will be dropped. Try sending fewer requests.",
     "DFStringPerfFilterPlaceId": 0,
     "DFStringR15CollisionTypeField": "universeAvatarCollisionType",
@@ -8122,7 +8122,7 @@
     "FFlagFixAudioEmitterPositionClicks": true,
     "DFFlagCLI122685": true,
     "FFlagAppNavRefactorShowStudioCTA": true,
-    "DFIntMissingDataPingReportThrottleHundredthsPercent": 1000,
+    "DFIntMissingDataPingReportThrottleHundredthsPercent": 10,
     "FFlagLuaAppTextFooterLegacyTile": true,
     "DFFlagSimEditableMeshAttributeFixes": true,
     "DFFlagPhysicsMechanismCacheOptimizeAlloc": true,
@@ -8150,12 +8150,8 @@
     "FFlagEnableParentalControlsScreentimeEnforcement3": true,
     "FFlagEnableUserAccessServiceIntegration3": true,
     "FIntSettingsHubPlayersButtonsResponsiveThreshold": 0,
-    "FFlagEnableGradientForChatWindowMessage_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:55:34",
-    "FFlagExpChatOverridePrefixNameColor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:57:00",
     "FFlagCLI116909Mac": true,
-    "DFFlagEnableChatWindowMessageProperties1001_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:58:02",
     "FFlagMRDTablePerfImprov2": true,
-    "FFlagEnableExperienceCoordinator7_Rollout": "true;60;2024-11-06T20:05:50",
     "FFlagVideoReportPacketOnSuccessfulSubmit": true,
     "FFlagAUMScaleUpdateHeadsAndLayeredClothing": true,
     "FFlagLuauFixCyclicUnionsOfIntersections": true,
@@ -8528,12 +8524,48 @@
     "FFlagPath2DUseFlagForControlPointLimit": true,
     "FFlagSupportGamepadDeviceType2": true,
     "FFlagCaptureServiceRequestSignature": true,
-    "FFlagAXRenameBestsellingSortIXPEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:49",
-    "FFlagStudioVisualizationModesServiceFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:51",
     "FFlagSplitCoreAndDevUIMetrics": true,
     "FFlagEnableChannelTabsConfiguration1008": true,
     "FFlagExpChatEnableChannelTabsUI1010": true,
-    "FFlagMeshLoDSendTimeToServeMesh_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:46:59",
+    "DFFlagEnableChatWindowMessageProperties1001": true,
+    "FFlagEnableGradientForChatWindowMessage": true,
+    "FFlagExpChatOverridePrefixNameColor": true,
+    "FFlagEnableExperienceCoordinator7": true,
+    "FFlagAXRenameBestsellingSortIXPEnabled": true,
+    "FFlagStudioVisualizationModesServiceFix": true,
+    "FFlagMeshLoDSendTimeToServeMesh": true,
+    "DFIntMRDTablePerfImprovReportIntervalMSec": 300000,
+    "DFIntVideoIsLoadedMetricsReportHundredthsPercent": 10,
+    "DFIntVideoThumbnailMetricsReportHundredthsPercent": 10,
+    "FFlagAXUpdateAvatarInventoryParamName": true,
+    "FFlagGraphicsVulkanClampSurfaceSize": true,
+    "EnableGameJoinContextAndroidNative": "true",
+    "DFIntInExpAvatarCreationEventsThrottleHundredthPercent": 10000,
+    "FFlagEnableRetryOnPrefetch401": true,
+    "DFFlagFixMeshScale2": false,
+    "FFlagCoreScriptPublishAssetAnalytics": true,
+    "FFlagAXEnableAvatarOutfitDeepLink": true,
+    "FFlagAXEnableOutfitAttribution2": true,
+    "FFlagAXOutfitModerationStatus": true,
+    "DFIntMRDTableMemUsageThrottleHundredthsPercent": 50,
+    "DFFlagDebounceJointDoubleAdd": true,
+    "FFlagScreenshotsAddCustomToastDuration": true,
+    "FFlagDraggerUseFolderNotFrame": true,
+    "DFFlagReportNewTimestampsToGameService": true,
+    "DFFlagSendMatchMakingRccLogPrefix": true,
+    "FFlagCOLLAB6176PlaceAnnotationsRCC": true,
+    "FFlagPCGDKUserAgent": true,
+    "DFFlagRobloxTelemetryReliabilityCounter": true,
+    "FFlagAXDisableHeadRefinementTooltipVR": true,
+    "FFlagAXWidgetItemsPerRowLowerBoundHoldoutFix": true,
+    "FFlagDraggerExternalHover2": true,
+    "DFStringRobloxTelemetryReliabilityCountAllowList": "perfdata",
+    "FFlagFriendsLandingPaginatedFriends_v4": true,
+    "FFlagRemoveKDTree2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T17:32:31",
+    "FFlagGraphicsVulkanSwapchainCount": true,
+    "FFlagMeshLoDSendTimeToServeMesh_Rollout": "false;60;2024-11-07T18:15:53",
+    "DFIntMRDTablePerfImprovReportIntervalMSec_Rollout": "60000;60;2024-11-07T18:29:47",
+    "FFlagStudioDockingDisableLayoutTelem_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T18:36:29",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9089,7 +9121,6 @@
     "FFlagEdpPlayerFeedbackLogIXPExposure": true,
     "FFlagLuaAppVpcUpsell3": true,
     "FIntUnknownUpsellErrorEventHundredthsPercent": 10000,
-    "FIntReactPerfTrackerKibana_Staged": "2;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:52:20",
     "FIntReactMicroprofilerLevel": 1,
     "FFlagAXEnableSearchCounters": true,
     "FFlagAXSearchRefactorForAnalytics": true,
@@ -9104,8 +9135,11 @@
     "FFlagColorPickerSliderOptimization2": true,
     "AndroidInitializeAndroidUpdateAdapter": true,
     "EnableAndroidCheckTTIFlagFetchUseCase": true,
-    "FStringFlagRepoGitHashFastString": "ce1d91db6746fe1e252fc52385405980762a3b44",
-    "DFStringFlagRepoGitHashDynamicString": "ce1d91db6746fe1e252fc52385405980762a3b44",
-    "FStringFlipTimeStampFastString": "2024-11-06T20:49:33.138Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-06T20:49:33.138Z"
+    "FIntReactPerfTrackerKibana": 2,
+    "DFIntUIPerfSplitCoreDev_ReportHundredthsPercent2": 10,
+    "FFlagPerformanceControlNewEffectModel4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T18:18:26",
+    "FStringFlagRepoGitHashFastString": "d550a449ff21c0f192e7bf114fdfd8cb7b003b00",
+    "DFStringFlagRepoGitHashDynamicString": "d550a449ff21c0f192e7bf114fdfd8cb7b003b00",
+    "FStringFlipTimeStampFastString": "2024-11-07T18:37:51.703Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-07T18:37:51.703Z"
 }
