--- a/UWPApp.json
+++ b/UWPApp.json
@@ -170,7 +170,7 @@
     "DFLogTrackTeamCreateSaveMD5HashOutput": 6,
     "DFStringAdditionalBlacklistHeaders": "SOAPAction",
     "DFStringAltTelegrafAddress": "35.155.141.13",
-    "DFStringAnalyticsNS1BeaconConfig": "https://c0cfly.rbxcdn.com/test-50kb.png|g2hjxw|https://c0ak.rbxcdn.com/test-50kb.png|g2g5dg|https://c0aws.rbxcdn.com/test-50kb.png|148d53m",
+    "DFStringAnalyticsNS1BeaconConfig": "https://sc0cfly.rbxcdn.com/test-50kb.png|g2hjxw|https://sc0ak.rbxcdn.com/test-50kb.png|g2g5dg|https://sc0aws.rbxcdn.com/test-50kb.png|148d53m",
     "DFStringDataStoreThrottleMsg": "DataStore request was added to queue. If request queue fills, further requests will be dropped. Try sending fewer requests.",
     "DFStringPerfFilterPlaceId": 0,
     "DFStringR15CollisionTypeField": "universeAvatarCollisionType",
@@ -8122,7 +8122,7 @@
     "FFlagFixAudioEmitterPositionClicks": true,
     "DFFlagCLI122685": true,
     "FFlagAppNavRefactorShowStudioCTA": true,
-    "DFIntMissingDataPingReportThrottleHundredthsPercent": 1000,
+    "DFIntMissingDataPingReportThrottleHundredthsPercent": 10,
     "FFlagLuaAppTextFooterLegacyTile": true,
     "DFFlagSimEditableMeshAttributeFixes": true,
     "DFFlagPhysicsMechanismCacheOptimizeAlloc": true,
@@ -8150,12 +8150,8 @@
     "FFlagEnableParentalControlsScreentimeEnforcement3": true,
     "FFlagEnableUserAccessServiceIntegration3": true,
     "FIntSettingsHubPlayersButtonsResponsiveThreshold": 0,
-    "FFlagEnableGradientForChatWindowMessage_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:55:34",
-    "FFlagExpChatOverridePrefixNameColor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:57:00",
     "FFlagCLI116909Mac": true,
-    "DFFlagEnableChatWindowMessageProperties1001_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T19:58:02",
     "FFlagMRDTablePerfImprov2": true,
-    "FFlagEnableExperienceCoordinator7_Rollout": "true;60;2024-11-06T20:05:50",
     "FFlagVideoReportPacketOnSuccessfulSubmit": true,
     "FFlagAUMScaleUpdateHeadsAndLayeredClothing": true,
     "FFlagLuauFixCyclicUnionsOfIntersections": true,
@@ -8528,13 +8524,48 @@
     "FFlagPath2DUseFlagForControlPointLimit": true,
     "FFlagSupportGamepadDeviceType2": true,
     "FFlagCaptureServiceRequestSignature": true,
-    "FFlagAXRenameBestsellingSortIXPEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:49",
-    "FFlagStudioVisualizationModesServiceFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:25:51",
     "FFlagSplitCoreAndDevUIMetrics": true,
     "FFlagEnableChannelTabsConfiguration1008": true,
     "FFlagExpChatEnableChannelTabsUI1010": true,
-    "FFlagMeshLoDSendTimeToServeMesh_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:46:59",
-    "DFIntMissingDataPingReportThrottleHundredthsPercent_Staged": "10;SteadyState;10;30;Rollout;100;30;Promote;2024-11-06T20:51:11",
+    "DFFlagEnableChatWindowMessageProperties1001": true,
+    "FFlagEnableGradientForChatWindowMessage": true,
+    "FFlagExpChatOverridePrefixNameColor": true,
+    "FFlagEnableExperienceCoordinator7": true,
+    "FFlagAXRenameBestsellingSortIXPEnabled": true,
+    "FFlagStudioVisualizationModesServiceFix": true,
+    "FFlagMeshLoDSendTimeToServeMesh": true,
+    "DFIntMRDTablePerfImprovReportIntervalMSec": 300000,
+    "DFIntVideoIsLoadedMetricsReportHundredthsPercent": 10,
+    "DFIntVideoThumbnailMetricsReportHundredthsPercent": 10,
+    "FFlagAXUpdateAvatarInventoryParamName": true,
+    "FFlagGraphicsVulkanClampSurfaceSize": true,
+    "EnableGameJoinContextAndroidNative": "true",
+    "DFIntInExpAvatarCreationEventsThrottleHundredthPercent": 10000,
+    "FFlagEnableRetryOnPrefetch401": true,
+    "DFFlagFixMeshScale2": false,
+    "FFlagCoreScriptPublishAssetAnalytics": true,
+    "FFlagAXEnableAvatarOutfitDeepLink": true,
+    "FFlagAXEnableOutfitAttribution2": true,
+    "FFlagAXOutfitModerationStatus": true,
+    "DFIntMRDTableMemUsageThrottleHundredthsPercent": 50,
+    "DFFlagDebounceJointDoubleAdd": true,
+    "FFlagScreenshotsAddCustomToastDuration": true,
+    "FFlagDraggerUseFolderNotFrame": true,
+    "DFFlagReportNewTimestampsToGameService": true,
+    "DFFlagSendMatchMakingRccLogPrefix": true,
+    "FFlagCOLLAB6176PlaceAnnotationsRCC": true,
+    "FFlagPCGDKUserAgent": true,
+    "DFFlagRobloxTelemetryReliabilityCounter": true,
+    "FFlagAXDisableHeadRefinementTooltipVR": true,
+    "FFlagAXWidgetItemsPerRowLowerBoundHoldoutFix": true,
+    "FFlagDraggerExternalHover2": true,
+    "DFStringRobloxTelemetryReliabilityCountAllowList": "perfdata",
+    "FFlagFriendsLandingPaginatedFriends_v4": true,
+    "FFlagGraphicsVulkanSwapchainCount": true,
+    "FFlagMeshLoDSendTimeToServeMesh_Rollout": "false;60;2024-11-07T18:15:53",
+    "DFIntMRDTablePerfImprovReportIntervalMSec_Rollout": "60000;60;2024-11-07T18:29:47",
+    "FFlagStudioDockingDisableLayoutTelem_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T18:36:29",
+    "FFlagRemoveKDTree2": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8744,8 +8775,8 @@
     "FFlagRuntimeEnabled8": true,
     "FFlagColorPickerSliderOptimization2": true,
     "FFlagUWPSkipNetworkCheck": true,
-    "FStringFlagRepoGitHashFastString": "4f0d383151f6d4d93ced22cc629792404f7d2ab3",
-    "DFStringFlagRepoGitHashDynamicString": "4f0d383151f6d4d93ced22cc629792404f7d2ab3",
-    "FStringFlipTimeStampFastString": "2024-11-06T20:51:48.371Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-06T20:51:48.371Z"
+    "FStringFlagRepoGitHashFastString": "d340b6fef040153f558b4ec3a14847e32a684898",
+    "DFStringFlagRepoGitHashDynamicString": "d340b6fef040153f558b4ec3a14847e32a684898",
+    "FStringFlipTimeStampFastString": "2024-11-07T18:44:46.504Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-07T18:44:46.504Z"
 }
