--- a/MacClientBootstrapper.json
+++ b/MacClientBootstrapper.json
@@ -160,10 +160,15 @@
     "FFlagHttpGetSyncUseNativeRetry": true,
     "FFlagHttpPostSyncUseNativeRetry": true,
     "FFlagColorPickerSliderOptimization2": true,
-    "FFlagWinInstallerUseTempFolderForUpdate_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T17:47:34",
-    "FFlagMacInstallerUseEventIngest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T18:15:36",
+    "FFlagMacInstallerUseEventIngest": true,
+    "FFlagWinInstallerUseBITS2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagUIBloxUseFullPageModalZIndex": true,
+    "FFlagAXRemoveDividers": true,
+    "FFlagAXHeadCategoryCombineEnabled4": true,
+    "FFlagBehaviorCollectionControlEnabled": true,
+    "FFlagAppChatBehaviorCollectionEnabledMaster": true,
+    "FIntAppChatBehaviorCollectionEnabledPercentage": 100,
     "DFIntCrashUploadToBacktracePercentage": 10,
     "DeprecatedOSXLinkURL": "https://en.help.roblox.com/hc/articles/203312800",
     "DeprecatedOSXMinorVersion": 9,
@@ -178,8 +183,8 @@
     "DeprecatedOSXMajorVersion": 10,
     "FFlagEnableDeepLinkUseExistingClient": true,
     "FFlagEnableSingleInstanceRobloxClient": true,
-    "FStringFlagRepoGitHashFastString": "5f85ff979af3bf682ff3bc504b4851874d57a22b",
-    "DFStringFlagRepoGitHashDynamicString": "5f85ff979af3bf682ff3bc504b4851874d57a22b",
-    "FStringFlipTimeStampFastString": "2024-11-07T18:32:27.795Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-07T18:32:27.795Z"
+    "FStringFlagRepoGitHashFastString": "c560dc06325950254746aa427aa037ee62f4f4a1",
+    "DFStringFlagRepoGitHashDynamicString": "c560dc06325950254746aa427aa037ee62f4f4a1",
+    "FStringFlipTimeStampFastString": "2024-11-13T00:50:34.605Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-13T00:50:34.605Z"
 }
