--- a/MacStudioBootstrapper.json
+++ b/MacStudioBootstrapper.json
@@ -160,16 +160,21 @@
     "FFlagHttpGetSyncUseNativeRetry": true,
     "FFlagHttpPostSyncUseNativeRetry": true,
     "FFlagColorPickerSliderOptimization2": true,
-    "FFlagWinInstallerUseTempFolderForUpdate_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T17:47:34",
-    "FFlagMacInstallerUseEventIngest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-07T18:15:36",
+    "FFlagMacInstallerUseEventIngest": true,
+    "FFlagWinInstallerUseBITS2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagUIBloxUseFullPageModalZIndex": true,
+    "FFlagAXRemoveDividers": true,
+    "FFlagAXHeadCategoryCombineEnabled4": true,
+    "FFlagBehaviorCollectionControlEnabled": true,
+    "FFlagAppChatBehaviorCollectionEnabledMaster": true,
+    "FIntAppChatBehaviorCollectionEnabledPercentage": 100,
     "FIntBootstrapper64BitStudioPercentage": 5,
     "InfluxInstallHundredthsPercentage": 1,
     "ShowInstallSuccessPrompt": false,
     "FFlagNotificationPersonAddIcons": true,
-    "FStringFlagRepoGitHashFastString": "5f85ff979af3bf682ff3bc504b4851874d57a22b",
-    "DFStringFlagRepoGitHashDynamicString": "5f85ff979af3bf682ff3bc504b4851874d57a22b",
-    "FStringFlipTimeStampFastString": "2024-11-07T18:32:27.795Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-07T18:32:27.795Z"
+    "FStringFlagRepoGitHashFastString": "22442567819a37b76e8d13e94e23ac2920d315ff",
+    "DFStringFlagRepoGitHashDynamicString": "22442567819a37b76e8d13e94e23ac2920d315ff",
+    "FStringFlipTimeStampFastString": "2024-11-13T00:34:42.303Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-13T00:34:42.303Z"
 }
