--- a/MacClientBootstrapper.json
+++ b/MacClientBootstrapper.json
@@ -161,7 +161,12 @@
     "FFlagColorPickerSliderOptimization2": true,
     "FFlagMacInstallerUseEventIngest": true,
     "FFlagWinInstallerUseBITS2": true,
-    "FFlagEnableLauncherGuard2": true,
+    "FFlagRefactorCanUserChat": true,
+    "FFlagWindowsInstallerTelemetryImprovements": true,
+    "FFlagMacInstallerReportUserID": true,
+    "FFlagTypesetterAllocOrCrash": true,
+    "FFlagMacPersonalizedInstallerEnabled2": true,
+    "FFlagWinPersonalizedInstallerEnabled2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagUIBloxUseFullPageModalZIndex": true,
     "FFlagAXRemoveDividers": true,
@@ -169,6 +174,7 @@
     "FFlagBehaviorCollectionControlEnabled": true,
     "FFlagAppChatBehaviorCollectionEnabledMaster": true,
     "FIntAppChatBehaviorCollectionEnabledPercentage": 100,
+    "FStringMacProgressiveDownloadExperimentBucketSettings": "v3-10-1",
     "DFIntCrashUploadToBacktracePercentage": 10,
     "DeprecatedOSXLinkURL": "https://en.help.roblox.com/hc/articles/203312800",
     "DeprecatedOSXMinorVersion": 9,
@@ -183,8 +189,8 @@
     "DeprecatedOSXMajorVersion": 10,
     "FFlagEnableDeepLinkUseExistingClient": true,
     "FFlagEnableSingleInstanceRobloxClient": true,
-    "FStringFlagRepoGitHashFastString": "948085c1bc34c003143133af570e1f8138ac954e",
-    "DFStringFlagRepoGitHashDynamicString": "948085c1bc34c003143133af570e1f8138ac954e",
-    "FStringFlipTimeStampFastString": "2024-11-14T03:06:21.958Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-14T03:06:21.958Z"
+    "FStringFlagRepoGitHashFastString": "beb690072feb21562a1d0a8be76f543ce0dc8970",
+    "DFStringFlagRepoGitHashDynamicString": "beb690072feb21562a1d0a8be76f543ce0dc8970",
+    "FStringFlipTimeStampFastString": "2024-11-21T19:47:31.190Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-21T19:47:31.190Z"
 }
