--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -7283,7 +7283,6 @@
     "DFFlagSimReduceStepAPSProcess": true,
     "FFlagExperienceCoordinatorHandleLowMemoryEventCorrectly": true,
     "FFlagVideoReleaseSchedulerOnDisconnect2_PlaceFilter": "true;106342907100016",
-    "DFFlagFlagRolloutTestDynamicBool11": true,
     "FFlagEnableRibbonConfigurationProvider": true,
     "FFlagAvatarPreviewerEquipIdleOnInit": true,
     "FFlagAvatarPreviewerRerunValidation": true,
@@ -9031,27 +9030,35 @@
     "FFlagMountSceneAnalysisProvider": true,
     "FFlagLuauMathMap": true,
     "DFFlagSmallRefactorInAssignPrimitive": true,
-    "FFlagTerrainEditorBlockDoubleMouseDown_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:07:16",
-    "FFlagTerrainEditorFlattenAdjustments_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:07:16",
-    "FFlagTerrainEditorLineFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:07:16",
-    "FFlagTerrainEditorSculptAdjustments_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:07:16",
-    "FFlagTerrainEditorSizingAdjustments_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:07:16",
     "FFlagAXHideTypeForIEC": true,
     "FFlagAXUseLocalPlayerAsIECCreator": true,
-    "FFlagFCFixFastClusterEntityRenderStats_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:10:13",
     "FFlagInviteListDeprecateNames": true,
     "FFlagLuaStartPageQuickLoad3": true,
     "FFlagLuauVectorLib": true,
-    "FFlagUIBloxEnableComboButtonInActionBar_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:23:38",
     "FFlagLuaStartPageAddingRecentsPage": true,
-    "FFlagAppChatMoveApolloProvider_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:32:41",
     "FFlagCacheTextBoundsInGuiText": true,
     "FFlagFlexLayoutStopCountingRelayouts": true,
-    "FFlagLCCheckCageWithScaling2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:40:15",
-    "FFlagRemovePSMLTextScraperListener_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:44:14",
     "FFlagAddFriendsTileUseUserProfile": true,
-    "AllowVideoPreRoll": true,
+    "FFlagFCFixFastClusterEntityRenderStats": true,
+    "FFlagTerrainEditorBlockDoubleMouseDown": true,
+    "FFlagTerrainEditorFlattenAdjustments": true,
+    "FFlagTerrainEditorLineFix": true,
+    "FFlagTerrainEditorSculptAdjustments": true,
+    "FFlagTerrainEditorSizingAdjustments": true,
+    "FFlagTutorialMarketplaceTabFix": true,
+    "FFlagUIBloxEnableComboButtonInActionBar": true,
+    "PerformanceControlParseLmkdConfigs": "true",
     "AxisAdornmentGrabSize": 12,
+    "FFlagAppChatMoveApolloProvider": true,
+    "FFlagLCCheckCageWithScaling2": true,
+    "FFlagRemovePSMLTextScraperListener": true,
+    "DFFlagPerformanceControlEnableNewMemoryUtilityCurve_Staged": "true;SteadyState;10;30;Revert;2024-11-21T20:51:02",
+    "AllowVideoPreRoll": true,
+    "FFlagAXFixLayeredClothingPosition_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:55:33",
+    "FFlagSpotlightManager2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:02:27",
+    "EnableIrisUpdatedCallingNotificationCompat2": "true",
+    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
+    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
     "CatalogPromoAssetId": -1,
@@ -9642,8 +9649,8 @@
     "FFlagAppChatInExperienceEnabledV651NewIcon": true,
     "FFlagIxpFastFlagIntegrationFetchOnStartup": true,
     "DFIntReloadIxpControllerHundredthPercent": 1000,
-    "FStringFlagRepoGitHashFastString": "001f29c9eed3eef14e51920c07b0d97222764e93",
-    "DFStringFlagRepoGitHashDynamicString": "001f29c9eed3eef14e51920c07b0d97222764e93",
-    "FStringFlipTimeStampFastString": "2024-11-21T19:57:30.823Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-21T19:57:30.823Z"
+    "FStringFlagRepoGitHashFastString": "0ea66a736e784627396f28dfc0ac81bf6c2087e0",
+    "DFStringFlagRepoGitHashDynamicString": "0ea66a736e784627396f28dfc0ac81bf6c2087e0",
+    "FStringFlipTimeStampFastString": "2024-11-21T21:20:54.693Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-21T21:20:54.693Z"
 }
