--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -7283,7 +7283,6 @@
     "DFFlagSimReduceStepAPSProcess": true,
     "FFlagExperienceCoordinatorHandleLowMemoryEventCorrectly": true,
     "FFlagVideoReleaseSchedulerOnDisconnect2_PlaceFilter": "true;106342907100016",
-    "DFFlagFlagRolloutTestDynamicBool11": true,
     "FFlagEnableRibbonConfigurationProvider": true,
     "FFlagAvatarPreviewerEquipIdleOnInit": true,
     "FFlagAvatarPreviewerRerunValidation": true,
@@ -9039,11 +9038,7 @@
     "FFlagLuaStartPageAddingRecentsPage": true,
     "FFlagCacheTextBoundsInGuiText": true,
     "FFlagFlexLayoutStopCountingRelayouts": true,
-    "FFlagLCCheckCageWithScaling2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:40:15",
-    "FFlagRemovePSMLTextScraperListener_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:44:14",
     "FFlagAddFriendsTileUseUserProfile": true,
-    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
-    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
     "FFlagFCFixFastClusterEntityRenderStats": true,
     "FFlagTerrainEditorBlockDoubleMouseDown": true,
     "FFlagTerrainEditorFlattenAdjustments": true,
@@ -9055,7 +9050,16 @@
     "PerformanceControlParseLmkdConfigs": "true",
     "FFlagPerformanceControlNewEffectModel4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:35:49",
     "FFlagAppChatMoveApolloProvider": true,
+    "FFlagLCCheckCageWithScaling2": true,
+    "FFlagRemovePSMLTextScraperListener": true,
+    "FFlagRenderEnableGlobalInstancingMetal": true,
     "AllowVideoPreRoll": true,
+    "FFlagSpotlightManager2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:02:27",
+    "EnableIrisUpdatedCallingNotificationCompat2": "true",
+    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
+    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
+    "DFFlagFlagRolloutTestDynamicBool11_Staged": "true;SteadyState;10;30;Revert;2024-11-21T21:25:15",
+    "DFFlagFlagRolloutTestDynamicBool11_IXP": "1;Portal.DFFlagFlagRolloutTestDynamicBool11;DFFlagFlagRolloutTestDynamicBool11;423748181;flagbank",
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
@@ -10115,7 +10119,11 @@
     "FFlagStudioTeamCreateSaver": true,
     "FFlagLuauDontRefCountTypesInTypeFunctions": true,
     "FFlagDraggerTelemetry": true,
-    "FFlagRenderEnableGlobalInstancingMetal": true,
+    "FFlagTutorialsFixTextLayout_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsHideNavInPlaytest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsUseCameraFocus_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsUseFinishTextOnLastStep_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsUseSafeSkip_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
     "FFlagVoiceChatStopSendingIceCandidate": false,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -10272,6 +10280,7 @@
     "FFlagVoiceChatCullingDoNotClearSsrcHistory": true,
     "FFlagUseCommunitiesTranslation": true,
     "FFlagEnableRejectPromiseOnWebviewClosed_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:35:27",
+    "FFlagLuaAppDeferInteractive_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:51:04",
     "FLogSignalRNotification": 0,
     "FStringFeature_CookieProtocolEnabled": "496;100",
     "FFlagDebugLuaAppValidateProps": true,
@@ -10292,8 +10301,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "b9719d650fb8e934800f96149f36be29cbeadd6a",
-    "DFStringFlagRepoGitHashDynamicString": "b9719d650fb8e934800f96149f36be29cbeadd6a",
-    "FStringFlipTimeStampFastString": "2024-11-21T20:43:57.415Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-21T20:43:57.415Z"
+    "FStringFlagRepoGitHashFastString": "829d76e85ce8e1bd561a04632714fe335aedb684",
+    "DFStringFlagRepoGitHashDynamicString": "829d76e85ce8e1bd561a04632714fe335aedb684",
+    "FStringFlipTimeStampFastString": "2024-11-21T21:27:54.410Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-21T21:27:54.410Z"
 }
