--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -7283,7 +7283,6 @@
     "DFFlagSimReduceStepAPSProcess": true,
     "FFlagExperienceCoordinatorHandleLowMemoryEventCorrectly": true,
     "FFlagVideoReleaseSchedulerOnDisconnect2_PlaceFilter": "true;106342907100016",
-    "DFFlagFlagRolloutTestDynamicBool11": true,
     "FFlagEnableRibbonConfigurationProvider": true,
     "FFlagAvatarPreviewerEquipIdleOnInit": true,
     "FFlagAvatarPreviewerRerunValidation": true,
@@ -8908,7 +8907,7 @@
     "FFlagNavigateToLuaFriendsPageFromMore": true,
     "FFlagWrapDeformerTargetModifier6": false,
     "FFlagWrapDeformerTargetModifier6_PlaceFilter": "true;124012682058672",
-    "FFlagRuntimeTimerRework": true,
+    "FFlagRuntimeTimerRework": false,
     "FFlagVRPanelWidthIXPEnabledV5": true,
     "DFFlagSimEditableMeshSlotTypeChecking": true,
     "FFlagSimEditableMemoryDestructorLockFix2": true,
@@ -9037,14 +9036,9 @@
     "FFlagLuaStartPageQuickLoad3": true,
     "FFlagLuauVectorLib": true,
     "FFlagLuaStartPageAddingRecentsPage": true,
-    "FFlagAppChatMoveApolloProvider_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:32:41",
     "FFlagCacheTextBoundsInGuiText": true,
     "FFlagFlexLayoutStopCountingRelayouts": true,
-    "FFlagLCCheckCageWithScaling2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:40:15",
-    "FFlagRemovePSMLTextScraperListener_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:44:14",
     "FFlagAddFriendsTileUseUserProfile": true,
-    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
-    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
     "FFlagFCFixFastClusterEntityRenderStats": true,
     "FFlagTerrainEditorBlockDoubleMouseDown": true,
     "FFlagTerrainEditorFlattenAdjustments": true,
@@ -9053,7 +9047,18 @@
     "FFlagTerrainEditorSizingAdjustments": true,
     "FFlagTutorialMarketplaceTabFix": true,
     "FFlagUIBloxEnableComboButtonInActionBar": true,
+    "PerformanceControlParseLmkdConfigs": "true",
+    "FFlagPerformanceControlNewEffectModel4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:35:49",
+    "FFlagAppChatMoveApolloProvider": true,
+    "FFlagLCCheckCageWithScaling2": true,
+    "FFlagRemovePSMLTextScraperListener": true,
+    "DFFlagPerformanceControlEnableNewMemoryUtilityCurve_Staged": "true;SteadyState;10;30;Revert;2024-11-21T20:51:02",
+    "FFlagAXHeadCategoryCombineEnabled4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:55:33",
     "AllowVideoPreRoll": true,
+    "FFlagSpotlightManager2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:02:27",
+    "EnableIrisUpdatedCallingNotificationCompat2": "true",
+    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
+    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
@@ -10103,16 +10108,21 @@
     "FFlagStudioPassPlayTestSessionGuid2": true,
     "DFFlagIsFriendsWithUsesAreFriendsEndpointV4": true,
     "FFlagLuaStartPageNetworkCache3": true,
-    "FFlagTutorialsUseExtensibilityApi3_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:26:26",
-    "FFlagDraggerTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:31:38",
-    "FFlagLuauDontRefCountTypesInTypeFunctions_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:33:02",
-    "DFIntRobloxTelemetryConnectionIndicatorSaveFailure_Staged": "10000;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:33:39",
-    "DFIntRobloxTelemetryTeamCreateRecoveryFileFailure_Staged": "10000;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:33:39",
-    "FFlagStudioTeamCreateSaver_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:33:39",
     "FFlagFixStudioTour2ToolboxSpotlight": true,
     "FFlagStudioTour2FixInsertCar": true,
     "FFlagConvAIAlwaysShowAssetIterationCaret": true,
     "FFlagInsertObjectFixFocus": true,
+    "FFlagTutorialsUseExtensibilityApi3": true,
+    "DFIntRobloxTelemetryConnectionIndicatorSaveFailure": 10000,
+    "DFIntRobloxTelemetryTeamCreateRecoveryFileFailure": 10000,
+    "FFlagStudioTeamCreateSaver": true,
+    "FFlagLuauDontRefCountTypesInTypeFunctions": true,
+    "FFlagDraggerTelemetry": true,
+    "FFlagTutorialsFixTextLayout_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsHideNavInPlaytest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsUseCameraFocus_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsUseFinishTextOnLastStep_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
+    "FFlagTutorialsUseSafeSkip_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:23:33",
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -10258,6 +10268,8 @@
     "DFFlagVisBugFixTrusses": true,
     "FFlagVoiceChatCullingDoNotClearSsrcHistory": true,
     "FFlagUseCommunitiesTranslation": true,
+    "FFlagEnableRejectPromiseOnWebviewClosed_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:35:27",
+    "FFlagLuaAppDeferInteractive_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:51:04",
     "FFlagDebugLuaAppValidateProps": true,
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
@@ -10284,8 +10296,8 @@
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagLayoutNodeGetSharedInstanceC": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "c8eb2b3a345f870b2b2963cab828060142015f67",
-    "DFStringFlagRepoGitHashDynamicString": "c8eb2b3a345f870b2b2963cab828060142015f67",
-    "FStringFlipTimeStampFastString": "2024-11-21T20:27:00.002Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-21T20:27:00.002Z"
+    "FStringFlagRepoGitHashFastString": "9caae675f10490c6e6d5ef3c2c69d724ebcbb2f3",
+    "DFStringFlagRepoGitHashDynamicString": "9caae675f10490c6e6d5ef3c2c69d724ebcbb2f3",
+    "FStringFlipTimeStampFastString": "2024-11-21T21:24:20.301Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-21T21:24:20.301Z"
 }
