--- a/UWPApp.json
+++ b/UWPApp.json
@@ -7283,7 +7283,6 @@
     "DFFlagSimReduceStepAPSProcess": true,
     "FFlagExperienceCoordinatorHandleLowMemoryEventCorrectly": true,
     "FFlagVideoReleaseSchedulerOnDisconnect2_PlaceFilter": "true;106342907100016",
-    "DFFlagFlagRolloutTestDynamicBool11": true,
     "FFlagEnableRibbonConfigurationProvider": true,
     "FFlagAvatarPreviewerEquipIdleOnInit": true,
     "FFlagAvatarPreviewerRerunValidation": true,
@@ -9040,8 +9039,6 @@
     "FFlagCacheTextBoundsInGuiText": true,
     "FFlagFlexLayoutStopCountingRelayouts": true,
     "FFlagAddFriendsTileUseUserProfile": true,
-    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
-    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
     "FFlagFCFixFastClusterEntityRenderStats": true,
     "FFlagTerrainEditorBlockDoubleMouseDown": true,
     "FFlagTerrainEditorFlattenAdjustments": true,
@@ -9055,9 +9052,14 @@
     "FFlagAppChatMoveApolloProvider": true,
     "FFlagLCCheckCageWithScaling2": true,
     "FFlagRemovePSMLTextScraperListener": true,
-    "DFFlagPerformanceControlEnableNewMemoryUtilityCurve_Staged": "true;SteadyState;10;30;Revert;2024-11-21T20:51:02",
     "FFlagAXHeadCategoryCombineEnabled4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:55:33",
     "FFlagAXFixLayeredClothingPosition_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:55:33",
+    "FFlagSpotlightManager2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:02:27",
+    "EnableIrisUpdatedCallingNotificationCompat2": "true",
+    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
+    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
+    "DFFlagFlagRolloutTestDynamicBool11_Staged": "true;SteadyState;10;30;Revert;2024-11-21T21:25:15",
+    "DFFlagFlagRolloutTestDynamicBool11_IXP": "1;Portal.DFFlagFlagRolloutTestDynamicBool11;DFFlagFlagRolloutTestDynamicBool11;423748181;flagbank",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9276,8 +9278,8 @@
     "FFlagIxpFastFlagIntegrationUpdateIxpValue": true,
     "FFlagIxpFastFlagIntegrationFetchOnStartup": true,
     "DFIntReloadIxpControllerHundredthPercent": 1000,
-    "FStringFlagRepoGitHashFastString": "71f61fe2e7f636f6037f9c5b0a0861fdcf74c8f0",
-    "DFStringFlagRepoGitHashDynamicString": "71f61fe2e7f636f6037f9c5b0a0861fdcf74c8f0",
-    "FStringFlipTimeStampFastString": "2024-11-21T20:56:45.465Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-21T20:56:45.465Z"
+    "FStringFlagRepoGitHashFastString": "a4db6895b993b264395f9878a3824fc083546dd9",
+    "DFStringFlagRepoGitHashDynamicString": "a4db6895b993b264395f9878a3824fc083546dd9",
+    "FStringFlipTimeStampFastString": "2024-11-21T21:30:17.597Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-21T21:30:17.597Z"
 }
