--- a/iOSApp.json
+++ b/iOSApp.json
@@ -7283,7 +7283,6 @@
     "DFFlagSimReduceStepAPSProcess": true,
     "FFlagExperienceCoordinatorHandleLowMemoryEventCorrectly": true,
     "FFlagVideoReleaseSchedulerOnDisconnect2_PlaceFilter": "true;106342907100016",
-    "DFFlagFlagRolloutTestDynamicBool11": true,
     "FFlagEnableRibbonConfigurationProvider": true,
     "FFlagAvatarPreviewerEquipIdleOnInit": true,
     "FFlagAvatarPreviewerRerunValidation": true,
@@ -9036,16 +9035,10 @@
     "FFlagInviteListDeprecateNames": true,
     "FFlagLuaStartPageQuickLoad3": true,
     "FFlagLuauVectorLib": true,
-    "FFlagUIBloxEnableComboButtonInActionBar_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:23:38",
     "FFlagLuaStartPageAddingRecentsPage": true,
-    "FFlagAppChatMoveApolloProvider_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:32:41",
     "FFlagCacheTextBoundsInGuiText": true,
     "FFlagFlexLayoutStopCountingRelayouts": true,
-    "FFlagLCCheckCageWithScaling2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:40:15",
-    "FFlagRemovePSMLTextScraperListener_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T19:44:14",
     "FFlagAddFriendsTileUseUserProfile": true,
-    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
-    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:07:43",
     "FFlagFCFixFastClusterEntityRenderStats": true,
     "FFlagTerrainEditorBlockDoubleMouseDown": true,
     "FFlagTerrainEditorFlattenAdjustments": true,
@@ -9053,9 +9046,19 @@
     "FFlagTerrainEditorSculptAdjustments": true,
     "FFlagTerrainEditorSizingAdjustments": true,
     "FFlagTutorialMarketplaceTabFix": true,
-    "AllowVideoPreRoll": true,
-    "AxisAdornmentGrabSize": 12,
+    "FFlagUIBloxEnableComboButtonInActionBar": true,
+    "PerformanceControlParseLmkdConfigs": "true",
     "CaptureCountersIntervalInMinutes": 5,
+    "FFlagAppChatMoveApolloProvider": true,
+    "FFlagLCCheckCageWithScaling2": true,
+    "FFlagRemovePSMLTextScraperListener": true,
+    "DFFlagPerformanceControlEnableNewMemoryUtilityCurve_Staged": "true;SteadyState;10;30;Revert;2024-11-21T20:51:02",
+    "AxisAdornmentGrabSize": 12,
+    "AllowVideoPreRoll": true,
+    "FFlagSpotlightManager2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:02:27",
+    "EnableIrisUpdatedCallingNotificationCompat2": "true",
+    "FFlagALT2_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
+    "FFlagALT_STUDIOPLAT_35983_LockDownBacktraceAttributes": true,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
     "DFFlagEnableRemoteProfiling": true,
@@ -9682,8 +9685,10 @@
     "FStringLuaAppSlpIxpLayer": "PlayerApp.HomePage.UX.WholePageRanking",
     "FFlagGuiStatePressedToHoverOnRelease": true,
     "FFlagUseCommunitiesTranslation": true,
-    "FStringFlagRepoGitHashFastString": "327b0cbe200d42f9a56d76fcc6055a84f0564341",
-    "DFStringFlagRepoGitHashDynamicString": "327b0cbe200d42f9a56d76fcc6055a84f0564341",
-    "FStringFlipTimeStampFastString": "2024-11-21T20:15:10.177Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-21T20:15:10.177Z"
+    "FFlagLuaAppDeferInteractive_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T20:51:04",
+    "DFStringEnabledPartnerBillingPremiumProductIds_Staged": "com.roblox.robloxmobile.RobloxPremium1000,com.roblox.robloxmobile.Premium80Robux;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T21:18:32",
+    "FStringFlagRepoGitHashFastString": "9caae675f10490c6e6d5ef3c2c69d724ebcbb2f3",
+    "DFStringFlagRepoGitHashDynamicString": "9caae675f10490c6e6d5ef3c2c69d724ebcbb2f3",
+    "FStringFlipTimeStampFastString": "2024-11-21T21:24:20.301Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-21T21:24:20.301Z"
 }
