--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -9056,8 +9056,6 @@
     "FFlagAXFixLayeredClothingPosition": true,
     "FFlagSpotlightManager2": true,
     "FFlagUGCValidateCageMeshDistance": true,
-    "FFlagAXAccessoryAdjustmentFtuxIXPEnabled2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T22:32:58",
-    "FFlagAXDisableHeadRefinementTooltip_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T22:32:58",
     "FFlagUGCValidateStraightenLimbsTransparency2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T22:44:24",
     "DFFlagFixEmptyKick": true,
     "FFlagCapturesShutterSoundHook2": true,
@@ -9069,6 +9067,8 @@
     "DFFlagEmitSafetyTelemetryInCallbackEnable_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T23:19:32",
     "DFFlagPerformanceControlEnableNewMemoryUtilityCurve_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-21T23:19:43",
     "DFFlagTouchEventsUseCollisionGroupsThreePhaseRollout": true,
+    "FFlagAXAccessoryAdjustmentFtuxIXPEnabled2": true,
+    "FFlagAXDisableHeadRefinementTooltip": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9659,8 +9659,8 @@
     "FFlagAppChatInExperienceEnabledV651NewIcon": true,
     "FFlagIxpFastFlagIntegrationFetchOnStartup": true,
     "DFIntReloadIxpControllerHundredthPercent": 2500,
-    "FStringFlagRepoGitHashFastString": "513d7c8eb15e1ea42390bddac13e2387e921b8d4",
-    "DFStringFlagRepoGitHashDynamicString": "513d7c8eb15e1ea42390bddac13e2387e921b8d4",
-    "FStringFlipTimeStampFastString": "2024-11-21T23:28:16.693Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-21T23:28:16.693Z"
+    "FStringFlagRepoGitHashFastString": "ebb78d2841c79c94d365c91637a87a3cac1bbb8d",
+    "DFStringFlagRepoGitHashDynamicString": "ebb78d2841c79c94d365c91637a87a3cac1bbb8d",
+    "FStringFlipTimeStampFastString": "2024-11-21T23:44:35.698Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-21T23:44:35.698Z"
 }
